# r2factor

./: .gitignore  Cargo.toml  KIMI.md  README.md  WORKFLOW.kimi.toml  WORKFLOW.opencode.toml  WORKFLOW.toml
.kimi/skills/speckit-plan/: SKILL.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: kimi.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
fixtures/: sample.rs
specs/001-combine-files-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-combine-files-module/checklists/: requirements.md
specs/001-combine-files-module/contracts/: cli-schema.md  mcp-tools.md
src/: backups.rs  carve.rs  cluster.rs  combine.rs  consolidate.rs  flatten.rs  graph.rs  health.rs  item.rs  lib.rs  llm.rs  main.rs  mcp.rs  names.rs  pipeline.rs  plan.rs  promote.rs  refine.rs  tokensave.rs  write.rs
src/combine/: facade.rs  impact.rs  parent.rs  plan.rs  report.rs  rewrite.rs  suggest.rs  write.rs
src/llm/: apply.rs  config.rs  mod.rs  prompt.rs  reply.rs  wire.rs
src/plan/: build.rs  cohesion.rs  dry_run.rs  mod.rs
src/tokensave/: evidence.rs  matching.rs  mod.rs
src/write/: backup.rs  facade.rs  mod.rs  preamble.rs  subfile.rs  uses.rs
tests/: backups_e2e.rs  combine_e2e.rs  consolidate_e2e.rs  flatten_e2e.rs  health_e2e.rs  mcp_e2e.rs  split_e2e.rs
